5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1716_2508.log
== SUBMITION (2019-05-16 15:07:52) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- EXECUTION TIME:
0.122156
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:14:13) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- EXECUTION TIME:
0.180495
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 5
    D1=
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:34:50) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:34:52) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- EXECUTION TIME:
0.196804
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:38:49) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>C):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(p>C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:38:49) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>C):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- EXECUTION TIME:
0.148793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 9, in <module>
    while(p>C):
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:38:52) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- EXECUTION TIME:
0.150112
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
